<resources>
    <string name="app_name">UdacodingTask3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="batik">Batik</string>
    <string name="museum">Museum</string>
    <string name="daerah">Daerah</string>
    <string name="covid19">Covid19</string>
    <string name="wonderful_indonesia">Wonderful\nIndonesiaku</string>
    <string name="menjaga_dan_merawatnya_adalah_namanah_kita_bersama">Melihat keragaman Indonesiaku\nkesempatan tidak terhingga yang\nakan engkau rasakan </string>
    <string name="let_s_explore">Let\'s Explore!</string>
    <string name="batik_indonesia">Batik Indonesia</string>
    <string name="explore_nindonesiaku">Explore\nIndonesiaku</string>
    <string name="mengexplore_keindahan_dan_keragaman_nbudaya_indonesiaku">Mengexplore keindahan dan keragaman\nbudaya Indonesiaku</string>
    <string name="provinsi_indonesia">Provinsi Indonesia</string>
    <string name="explore_image">explore image</string>
    <string name="data_covid_per_provinsi">Data Covid per Provinsi</string>
    <string name="cari_museum">cari Museum</string>
    <string name="cari">Cari</string>
    <string name="harga_rendah">Harga Rendah</string>
    <string name="harga_tinggi">Harga Tinggi</string>
    <string name="museum_indonesia">Museum Indonesia</string>
    <string name="pengelola">Pengelola</string>
    <string name="alamat">Alamat</string>
    <string name="tahun_berdiri">Tahun Berdiri:</string>
    <string name="sembuh">Sembuh</string>
    <string name="meninggal">Meninggal</string>
</resources>