<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    tools:context=".view.MuseumDetail"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:background="@drawable/bg_detail"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/nama_museum_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            tools:text="@string/museum"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/provinsi_museum_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/montserrat"
            tools:text="@string/museum" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/alamat"
            android:textColor="@color/black_color" />

        <TextView
            android:id="@+id/tv_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/montserrat"
            tools:text="Alamat" />


        <TextView
            android:id="@+id/tv_kota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/montserrat"
            tools:text="Kota" />


        <TextView
            android:id="@+id/tv_kecamatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/montserrat"
            tools:text="Kecamatan" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/tahun_berdiri"
                android:textColor="@color/black_color" />

            <TextView
                android:id="@+id/tv_thn_berdiri"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:fontFamily="@font/montserrat"
                tools:text="Tahun Berdiri" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/pengelola"
            android:textColor="@color/black_color" />

        <TextView
            android:id="@+id/tv_pengelola"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/montserrat"
            tools:text="pengelola" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/museum_indonesia"
        android:textColor="@color/tc_white"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>